CHANGELOG -- $Id: changelog,v 1.10 2004/07/15 16:58:18 shred Exp $

R4 (2004-07-15)
  * SwingUtils.spreadColumns() now also supports a minimum cell width
  * HTTPRequest now correctly sends UTF-8 encoded requests (as proposed
    by W3C) instead of using the local encoding.
  * HTTPRequest: getContentReader() now correctly handles the server's
    content encoding. getReader() is deprecated from now on.
  * HTTPRequest: added method to query result content charset
  * JSortedTable: added method to sort a column

R3 (2004-06-27)
  * MenuActionProxy now does not scale icon if its size is already
    correct.
  * Added methods to the SortableTableModelProxy that allows to map row
    numbers between the master TableModel and the proxy's representation.
  * JTable only accepts SortableTableModels now. Automatically wrapping
    classic TableModels was a conceptual flaw that lead to problems of
    proper addressing of the correct rows.

R2 (2004-06-22)
  * Checked in an obsolete CSVSplitter instead of CSVLine by
    mistake. Sorry!
  * Added a JIntegerField class

R1 (2004-06-21)
  * Initial public release
  * Released under MPL 1.1/GPL 2.0/LGPL 2.1 tri license

# jedit :mode=text:tabSize=2:noTabs=true:maxLineLen=72:
