@@ -1,0 +1,5 @@
+[Jar files]
+dist/jshred.jar
+[Source dirs]
+src
+[Aux classpath entries]
